--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,13 @@ section{
     float: left;
   
 }
+.logo{
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px solid #fff inset;
+}
 li{
     list-style-type: none;
 }
@@ -107,7 +114,7 @@ tfoot{
 /* detail main */
 .detail_main{
     width: 100%;
-    height: 100%;
+     min-height: 600px;
     flex-direction: column;
 }
 .detail_main a{
@@ -118,14 +125,21 @@ tfoot{
 .order_about{
     width: 80%;
     padding: 30px;
+    height: 400px;
     background-color: rgb(0, 102, 218);
+    flex-direction: column;
+    justify-content: space-around !important;
     color: #fff;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, sans-serif;
     flex-direction: column;
     margin-top: 40px;
+    border-radius: 20px;
 }
 
-
+.order_about p {
+    color: #fff;
+    font-weight: 700;
+  }
 .order_about p strong{
   color: #ffc107;
 }
@@ -149,11 +163,12 @@ tfoot{
 .part_form{
     background-color: #ced4da;
     padding: 20px;
-    height: 610px;
+    height: 580px;
     width: 70%;
     flex-direction: column;
     border-radius: 20px;
     justify-content: space-around;
+    font-weight: 600;
 }
 .part_form h3{
    color: #66a4e3;
@@ -165,7 +180,7 @@ tfoot{
 }
 
 .part_form input,select{
-    padding: 15px;
+    padding: 10px;
     width: 100%;
     outline: none;
     margin: 10px auto;
@@ -180,29 +195,29 @@ tfoot{
 }
 .enter_price{
     background-color: rgb(218, 0, 0);
-    padding: 10px;
+    padding:5px 10px;
     cursor: pointer;
     color: #fff;
     border-radius: 20px;
     float: right;
+    margin:5px;
 }
 .part_form button:hover,
 .enter_price:hover{
     background-color: #fff;
     transition: all .2s;
-    padding: 10px;
-    cursor: pointer;
     color: #04091e;
 }
 .part_form button{
     background-color: rgb(35, 182, 72);
-    padding: 10px 20px;
-    width: 30%;
+    padding:  20px;
+    width: 40%;
     cursor: pointer;
     border-radius: 20px;
     border: none;
     outline: none;
     color: #fff;
+    font-weight: 600;
 }
 .total_meb{
     text-align: left;
@@ -243,14 +258,12 @@ background-color: #c2d7ea;
 .btn_feed{
     background-color: rgb(218, 0, 0);
 }
-.load{
-    align-items: center !important;
-    justify-content: center !important;
-}
+
 .load p {
     font-size: 42px;
     font-weight: 700;
     color: #04091e;
+    margin-top: 300px;
 }
 
 
